--- a/PAGES/3b2_strings/index.html
+++ b/PAGES/3b2_strings/index.html
@@ -2031,7 +2031,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We briefly introduce types to represent text. At this stage, we&#39;ll keep the discussion to a minimum, as the website doesn&#39;t focus on string analysis. The only two relevant concepts you should get from this section are how to write text and the concept of string interpolation. </p>
+<p>This section introduces types that represent text. The discussion will be kept to a minimum, as the website doesn&#39;t focus on string analysis. The only two relevant concepts you should get from this section are how to write text and the concept of string interpolation. </p>
 <p>      </div>
     </div>
   </div>
@@ -2067,7 +2067,7 @@ z  &#61; &#39;🐒&#39;       # z equals the character 🐒</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Strings</h2> </p>
-<p>We&#39;ll rarely use variables of type <code>Char</code> directly. Instead, we&#39;ll work with the type <code>String</code>. This is formally defined as a sequence of characters that allows the user to express text. A <code>String</code> expression requires writing the text within double quotes <code>&quot; &quot;</code>. For strings expanding over several lines, triple quotes <code>&quot;&quot;&quot; &quot;&quot;&quot;</code> are more convenient.</p>
+<p>On this website, we&#39;ll rarely use variables of type <code>Char</code> directly. Instead, we&#39;ll work with the type <code>String</code>. This is formally defined as a sequence of characters that allows the user to express text. A <code>String</code> expression requires writing the text within double quotes <code>&quot; &quot;</code>. For strings expanding over several lines, triple quotes <code>&quot;&quot;&quot; &quot;&quot;&quot;</code> are more convenient.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &quot;Hello, beautiful world&quot;
 
