--- a/index.html
+++ b/index.html
@@ -1810,7 +1810,7 @@ section{
         <h2>Welcome to the Site!</h2></p>
 <p>  <span style="color:  rgb(168, 50, 50);"><strong> The website is still work in progress in terms of writing, content, and subjects covered</strong></span>. </p>
 <p>The chapters included so far can be found <a href="/julia_book/list_posts/">here</a>. I&#39;ll continue adding new content as I go.</p>
-<p>If you find any mistakes, typos, or have suggestions, please open an issue on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>. Your feedback is greatly appreciated&#33;</p>
+<p>If you find any mistakes, typos, or have any suggestions, please open an issue on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>. Your feedback is greatly appreciated&#33;</p>
 <p>      </div>
     </div>
   </div>
@@ -1822,7 +1822,7 @@ section{
         <h2>A Quick Overview of the Book</h2></p>
  <div class="bullets_nomarker">
 <ul>
-<li><p>  <span style="color: rgb(62, 121, 180);"><strong> <span style="text-decoration: underline">AUDIENCE</span></strong></span>: The book is intended <strong> for an audience with no background in programming</strong>. This doesn&#39;t mean that we solely cover basic topics. Rather, it defines the book&#39;s approach of starting from elementary concepts, <strong> gradually introducing more advanced concepts as we progress</strong>.</p>
+<li><p>  <span style="color: rgb(62, 121, 180);"><strong> <span style="text-decoration: underline">AUDIENCE</span></strong></span>: The book is intended <strong> for an audience with little or no background in programming</strong>. This doesn&#39;t mean that we solely cover basic topics. Rather, it defines the book&#39;s approach of starting from elementary concepts, <strong> gradually introducing more advanced concepts as we progress</strong>.</p>
 </li>
 </ul>
 <ul>
@@ -1964,7 +1964,7 @@ section{
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\1a_installation" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 3, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 4, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
