--- a/PAGES/3d_mutation/index.html
+++ b/PAGES/3d_mutation/index.html
@@ -2031,8 +2031,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>All the upcoming sections will be devoted to the topic of <strong> vector mutation</strong>. To properly cover this subject, we first need to introduce some preliminary concepts. The current section in particular clearly <strong> distinguishes between assignments and mutations of variables</strong>. In turn, the next section expands on how to index vectors, covering more flexible methods for selecting elements.</p>
-<p>The difference between assignments and mutations can easily go unnoticed by new users: both operations use the operator <code>&#61;</code>, despite being fundamentally different. Importantly, a clear distinction between these concepts is relevant not only for Julia, but also for other programming languages such as Python. </p>
+<p>The upcoming sections will be devoted to <strong> vector mutation</strong>. However, to properly cover this subject, we first need to introduce some preliminary concepts. The current section in particular seeks to <strong> distinguish between assignments and mutations of variables</strong>. For its part, the next section elaborates on vector indexing, providing various flexible methods for selecting elements.</p>
+<p>The difference between assignments and mutations can easily go unnoticed by new users: both operations use the operator <code>&#61;</code>, despite being fundamentally different. Moreover, a clear distinction between these concepts is relevant not only for Julia, but also for other programming languages such as Python. </p>
 <p>      </div>
     </div>
   </div>
@@ -2042,7 +2042,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Some Background</h2></p>
-<p>Let&#39;s begin by briefly reviewing the concept of <strong> variables</strong>. Formally, a variable is a label for an <strong> object</strong>, where the object in turn holds a <strong> value</strong>. Furthermore, objects can have a different number of <strong> elements</strong>, encompassing both single-element objects &#40;e.g., integers, floating points&#41; and collections &#40;e.g., vectors&#41;.</p>
+<p>Recall that a <strong> variable</strong> is a label for an <strong> object</strong>, where the object in turn holds a <strong> value</strong>. Moreover, objects can have a different number of <strong> elements</strong>, encompassing both single-element objects &#40;e.g., integers, floating points&#41; and collections &#40;e.g., vectors&#41;.</p>
  <div class="multiple_pics">
 <div class="row">
   <div class="column2">
@@ -2055,7 +2055,7 @@ color: white;
   </div>  
 </div>
 </div>
-<p>The distinction between an object and its elements is crucial for the rest of the section. The reason is that  <em> assignments are operations related to objects</em>, whereas  <em> mutations are related to elements</em>: assignments rebind variables to new objects, while mutations modify the elements of an existing object.</p>
+<p>The distinction between an object and its elements is crucial for the rest of the section, as  <em> assignments are operations related to objects</em>, whereas  <em> mutations are related to elements</em>. Specifically, assignments rebind variables to new objects, while mutations modify the elements of an existing object.</p>
 <p>      </div>
     </div>
   </div>
@@ -2066,10 +2066,10 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Assignments</h2></p>
 <p>  <span style="color: rgb(62, 121, 180);"><strong> Assignments</strong></span> bind a variable to an object. The operation is performed through statements like <code>x &#61; 3</code> or <code>x &#61; &#91;1,2,3&#93;</code>, where <code>3</code> and <code>&#91;1,2,3&#93;</code> represent the objects. </p>
-<p>Grasping the concept of assignment becomes simpler if we <strong> understand an object as a memory address</strong>. From this perspective, a statement like <code>x &#61; &#91;1,2,3&#93;</code> can be viewed as a two-step process:  <em> i</em>&#41; identifying a memory location to hold the object with value <code>&#91;1,2,3&#93;</code>, and  <em> ii</em>&#41; assigning a label <code>x</code> to this memory location for easy access to it.</p>
+<p>Grasping the concept of assignments becomes simpler if we <strong> understand an object as a memory address</strong>. From this perspective, a statement like <code>x &#61; &#91;1,2,3&#93;</code> can be viewed as a two-step process:  <em> i</em>&#41; identifying a memory location that will hold the object with value <code>&#91;1,2,3&#93;</code>, and  <em> ii</em>&#41; assigning a label <code>x</code> to the memory location for easy access to it.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content>     We&#39;ll use the analogy of locations in memory for understanding what objects are. Strictly speaking, this is not necessarily how Julia treats every object internally—in some cases Julia doesn&#39;t even store the object in memory. Nevertheless, visualizing objects as memory locations helps us build intuition.  </div>  </div>
+      <b>Warning!</b> </span>  </div>  <div class=content>     We&#39;ll use the analogy of memory addresses to help explain objects. However, memory locations should be understood as an &quot;abstract&quot; storage concept, in the sense that they don&#39;t necessarily correspond to a physical location in RAM. Internally, memory is handled in a complex way.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2201,7 +2201,7 @@ x&#91;1&#93; &#61;  0</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6a0_slices" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 3, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 4, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
