--- a/PAGES/7b01_preliminaries_stability/index.html
+++ b/PAGES/7b01_preliminaries_stability/index.html
@@ -1985,7 +1985,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>We&#39;ll focus on two key aspects of performance: type stability and memory allocation. While there are other aspects to consider for performance, they&#39;re the most basic ones. </p>
-<p>The focus on this section is in particular on ensuring type stability. A necessary condition for this is that each task to be executed is wrapped in a function. In this way, the task Julia starts by identifying the type of each variable, allowing it to specialize code to each variable&#39;s type. <strong> Any attempt to generate fast code without ensuring type stability is doomed to fail</strong>, thereby making it essential to performance.</p>
+<p>The focus on this section is in particular on ensuring type stability. This requires wrapping the task to be executed in a function, so that Julia is able to identify each variable&#39;s concrete type and specialize. <strong> Any attempt to generate fast code without ensuring type stability is doomed to fail</strong>, making type stability essential for performance.</p>
 <p>      </div>
     </div>
   </div>
@@ -2012,23 +2012,23 @@ b::Number  &#61; 2</code></pre>
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>a</code> <br/> 2.0 </div> <br/> <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>b</code> <br/> 2 </div></div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">x::T where T &lt;: Float64 &#61; 2     # or x::T where &#123;T &lt;: Number&#125; &#61; 2.0
+<pre><code class="language-julia">x::T where T&lt;:Float64 &#61; 2     # or x::T where &#123;T &lt;: Number&#125; &#61; 2.0
 
-y::T where T &lt;: Number  &#61; 2     # or y::T where &#123;T &lt;: Number&#125; &#61; 2</code></pre>
+y::T where T&lt;:Number  &#61; 2     # or y::T where &#123;T &lt;: Number&#125; &#61; 2</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code> <br/> 2.0 </div> <br/> <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>y</code> <br/> 2 </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>The two approaches presented restrict the types of variables from that point on. For instance, if you run the code in the first tab and then <code>a &#61; &quot;hello&quot;</code>, it&#39;ll throw an error. </p>
-<p>Note that when we restrict a variable to a supertype and then define its value, Julia will set it to the most specific type corresponding to the value. For instance, <code>b::Number</code> restricts <code>b</code> to take values of type <code>Number</code>. Thus, when we assign <code>b::Number &#61; 2</code>, Julia identifies the object held by <code>b</code> as having type <code>Int64</code>. Additionally, it establishes that you can only redefine <code>b</code> with values having type <code>Number</code>, such that <code>b &#61; 2.5</code>.</p>
+<p>Note that when we constrain a variable to a supertype and subsequently assign a value to it, Julia will automatically infer the most specific type that corresponds to the assigned value. For instance, <code>b::Number</code> restricts <code>b</code> to take values of type <code>Number</code>. Thus, when we assign <code>b::Number &#61; 2</code>, Julia identifies the object held by <code>b</code> as having type <code>Int64</code>. Additionally, it establishes that you can only redefine <code>b</code> with values having type <code>Number</code>, such that <code>b &#61; 2.5</code>.</p>
 <p>When we don&#39;t specify a variable&#39;s type, Julia implicitly assumes that the variable has type <code>Any</code>. This explains why we can assign any value to a variable, without throwing an error. To illustrate this, all the following variables have type <code>Any</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> We use different names for the variables, because otherwise Julia would throw an error. You can&#39;t re-specify a variable&#39;s type once you define it.  </span></span> </p>
  <div class=" code_box"> <details  open><summary> Type Any  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">a                   &#61; 2
-b::Any              &#61; 2
-d::T where T        &#61; 2
-c::T where T &lt;: Any &#61; 2</code></pre>
+<pre><code class="language-julia">a                 &#61; 2
+b::Any            &#61; 2
+d::T where T      &#61; 2
+c::T where T&lt;:Any &#61; 2</code></pre>
 <p></div> </div>  </details></div>
-<p>Note in particular the notation for <code>d</code>, which is equivalent to assuming <code>T &lt;: Any</code> as we omitted specifying the type after <code>T</code>. </p>
+<p>Note in particular the notation for <code>d</code>. This is equivalent to assuming <code>T &lt;: Any</code>, as we omitted specifying the type after <code>T</code>. </p>
 <p>      </div>
     </div>
   </div>
@@ -2069,7 +2069,7 @@ foo&#40;x::Float64, y::Float64&#41; &#61; x * y</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7b1_performanceBasics" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 3, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 4, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
