--- a/PAGES/3c2_tuples/index.html
+++ b/PAGES/3c2_tuples/index.html
@@ -2031,7 +2031,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The previous section focused on arrays, which are one form of collection. We now shift our focus to another form of collection called tuples. Their coverage at this point will be minimal, as tuples aren&#39;t essential to grasp the fundamentals of Julia. Still, a basic understanding of tuples is necessary to formalize functions.</p>
+<p>The previous section focused on arrays, which are one form of collection. We now shift our focus to another form of collection called tuples. Their coverage at this point will be minimal, as tuples aren&#39;t paramount to grasp the fundamentals of Julia. Still, a basic understanding of tuples is necessary to work with functions.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content> <strong> Tuples should only be used when the number of elements is small</strong>. Using tuples for large collections will result in slow computations at best, and trigger fatal errors at worst. For large collections, you should keep employing arrays.  </div>  </div>
